# mobile-tvbox-player

./: README.md
TV/: build.gradle.kts  settings.gradle.kts
TV/app/: build.gradle.kts
TV/app/src/main/java/com/fongmi/android/tv/: App.kt  Constant.kt  Setting.kt
TV/app/src/main/java/com/fongmi/android/tv/api/: Api.kt
TV/app/src/main/java/com/fongmi/android/tv/bean/: Beans.kt  Config.kt  Episode.kt  Live.kt  Result.kt  Site.kt  Vod.kt
TV/app/src/main/java/com/fongmi/android/tv/db/: AppDatabase.kt
TV/core-rust/: build.gradle.kts
TV/core-rust/src/main/rust/tv_core/: Cargo.toml
TV/core-rust/src/main/rust/tv_core/src/: cache.rs  decoder.rs  lib.rs  network.rs  player.rs
TV/engine-quickjs/: build.gradle.kts
TV/engine-quickjs/src/main/rust/quickjs_engine/: Cargo.toml
TV/engine-quickjs/src/main/rust/quickjs_engine/src/: lib.rs
TV/feature-config/: build.gradle.kts
TV/feature-dlna/: build.gradle.kts
TV/feature-remote/: build.gradle.kts
workspace/: PROJECT_INDEX.md
workspace/.monkeycode/docs/: aide-usage-guide.md  getting-started.md  libmpv-integration-guide.md
workspace/.monkeycode/specs/mobile-tvbox-player/: design.md  requirements.md  tasklist.md
workspace/mobile-tvbox-player/: README.md  build.gradle  settings.gradle
workspace/mobile-tvbox-player/app/: build.gradle  proguard-rules.pro
workspace/mobile-tvbox-player/app/src/main/: AndroidManifest.xml
workspace/mobile-tvbox-player/app/src/main/cpp/: CMakeLists.txt  mpv_jni.c
workspace/mobile-tvbox-player/app/src/main/res/layout/: activity_favorite.xml  activity_history.xml  activity_main_mobile.xml  activity_main_tv.xml  activity_player.xml  activity_settings.xml  dialog_import_url.xml  item_history.xml  item_site.xml
workspace/mobile-tvbox-player/app/src/main/res/menu/: bottom_nav_menu.xml
workspace/mobile-tvbox-player/app/src/main/res/values/: colors.xml  leanback_styles.xml  strings.xml  themes.xml
workspace/mobile-tvbox-player/app/src/main/res/xml/: arrays.xml  preferences_root.xml
(+38 files in other folders)
