[package]
name = "quickjs_engine"
version = "5.4.1"
edition = "2021"
description = "QuickJS engine with Rust wrapper for TV spider/crawler system"

[lib]
name = "quickjs_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = "0.21"
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rquickjs = { version = "0.7", features = ["loader", "futures", "parallel"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
